--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "chat-example",
+  "name": "chatfunnel",
   "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
+  "description": "",
   "main": "server.js",
   "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "author": "Vetal Matitskiy <chatfunnel@yopmail.com>",
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.15.2",
